<resources>
    <string name="app_name">S.A.D</string>
    <string name="label_facebook_login">Facebook Login</string>
    <string name="label_google_login">Google Login</string>
    <string name="label_email_login">Email Login</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="facebook_app_id">1275427005830395</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="register_with_email">Not a member? register with email</string>
    <string name="already_member_login">Already a member? please login</string>


    <string name="input_email">Please enter Email Id</string>
    <string name="input_password">Please enter password</string>
    <string name="wrong_emailid">Email-Id incorrect</string>
    <string name="password_too_short">password too short</string>
    <string name="sign_up">please sign up</string>
    <string name="sign_up_error">Sorry! something went wrong</string>
    <string name="sign_up_success_message">Registration successful,Please login</string>

    <string name="splash_text">S.A.D</string>

    <!--menu items for option menu -->
    <string name="menu_option_home">Home</string>

    <string name="menu_option1">Stress Questionnaire</string>

    <string name="menu_option2">Depression Questionnaire</string>

    <string name="menu_option3">Anxiety Questionnaire</string>

    <string name="menu_option4">personality Disorder Questionnaire</string>

    <string name="menu_option5">OCD Questionnaire</string>

    <string name="menu_option6">Tips</string>

    <string name="menu_option7">Settings</string>

    <string name="menu_option8">Logout</string>

    <string name="menu_option9">History</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="temp">This is probably the most important tweak you can make to....

    </string>

    <string name="content_fragment_str1">What is </string>

    <string name="content_fragment_str2">Causes of </string>

    <string name="content_fragment_str3">Symptoms of </string>

    <string name="placeholder">placeholder?</string>

</resources>
