<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fab_menu_layout">


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_menu_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="-1dp"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="#61dc3f"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_label=""
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="3dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true"
       >
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/stress_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option1"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/depression_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option2"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/anxiety_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option3"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/po_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option4"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/ocd_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option5"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/health_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_option6"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_colorPressed="#99d4d4d4"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>