<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_one"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.1"
           >
            <TextView

                android:layout_gravity="start|center_horizontal|clip_vertical"
                android:textSize="20sp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:text="@string/content_fragment_str1"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                />
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_gravity="start|center_horizontal|clip_vertical"
                android:textSize="20sp"
                android:id="@+id/what_is_text"
                android:layout_width="wrap_content"
                android:text="@string/placeholder"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="0.1"
                />
            </LinearLayout>
        <TextView
            android:id="@+id/_what_is_condition_desc"
            android:layout_margin="15dp"
            android:layout_gravity="start|center_horizontal|clip_vertical"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:text="@string/temp"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@null"
            android:text="view more.."
            android:textColor="@color/colorAccent"
            android:id="@+id/viewmore_about"
            android:onClick="onFragmentButtonCLick"
            />
     </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_two"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.1"
                >
                <TextView

                    android:layout_gravity="start|center_horizontal|clip_vertical"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:text="@string/content_fragment_str2"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    />
                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_gravity="start|center_horizontal|clip_vertical"
                    android:textSize="20sp"
                    android:id="@+id/cause_of_text"
                    android:layout_width="wrap_content"
                    android:text="@string/placeholder"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.1"
                    />
            </LinearLayout>
        <TextView
            android:id="@+id/condition_symptoms"
            android:layout_margin="15dp"
            android:layout_gravity="start|center_horizontal|clip_vertical"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:text="@string/temp"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@null"
            android:text="view more.."
            android:textColor="@color/colorAccent"
            android:id="@+id/viewmore_causes"
            android:onClick="onFragmentButtonCLick"
            />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_three"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.1"
                >
                <TextView

                    android:layout_gravity="start|center_horizontal|clip_vertical"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:text="@string/content_fragment_str3"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    />
                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_gravity="start|center_horizontal|clip_vertical"
                    android:textSize="20sp"
                    android:id="@+id/symptoms_of_text"
                    android:layout_width="wrap_content"
                    android:text="@string/placeholder"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="0.1"
                    />
            </LinearLayout>
        <TextView
            android:id="@+id/condition_ill_effects"
            android:layout_margin="15dp"
            android:layout_gravity="start|center_horizontal|clip_vertical"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:text="@string/temp"
            android:layout_height="wrap_content"
           />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@null"
            android:text="view more.."
            android:textColor="@color/colorAccent"
            android:id="@+id/viewmore_symptoms"
            android:onClick="onFragmentButtonCLick"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>